--- a/Information Theory/sections/sub/7.1 - FM-index.tex
+++ b/Information Theory/sections/sub/7.1 - FM-index.tex
@@ -33,8 +33,7 @@
     \end{description}
 
     \footnotetext{In this context, by ``run'' we refer to a sequence of the same symbol.}
-\end{document}
 
-%% BT_i are the partitions of BWT(T).
-%% BT^{MTF}_i are the partitions induced by the one above on MTF(BWT(T))
-%% BZ_i partitions of the compressed text. 
+    \subsubsection{The algorithm}
+    \subfile{../subsub/7.1.1 - FM-index the algorithm}
+\end{document}
