Added and completed section 8. Project completed, apart from minor checks.

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -1,6 +1,6 @@
 @article{shannon1948,
-  author       = {Claude E. Shannon},
   title        = {A mathematical theory of communication},
+  author       = {Claude E. Shannon},
   journal      = {Bell Syst. Tech. J.},
   volume       = {27},
   number       = {3},
@@ -137,3 +137,56 @@
   year         = {1984},
   doi          = {10.1109/MC.1984.1659158},
 }
+
+@article {kolmogorov1965,
+  author      = {Andrey N. Kolmogorov},
+  title       = {Three approaches to quantitative definition of information},
+  journal     = {International Journal of Computer Mathematics},
+  volume      = {2},
+  number      = {1-4},
+  pages       = {157--168},
+  year        = {1965},
+  doi         = {10.1080/00207166808803030}
+
+}
+
+@article{charikar2005,
+  author       = {Moses Charikar and
+                  Eric Lehman and
+                  Ding Liu and
+                  Rina Panigrahy and
+                  Manoj Prabhakaran and
+                  Amit Sahai and
+                  Abhi Shelat},
+  title        = {The smallest grammar problem},
+  journal      = {{IEEE} Trans. Inf. Theory},
+  volume       = {51},
+  number       = {7},
+  pages        = {2554--2576},
+  year      = {2005},
+  doi          = {10.1109/TIT.2005.850116},
+}
+
+@article{larsson2000,
+  author       = {N. Jesper Larsson and
+                  Alistair Moffat},
+  title        = {Off-line dictionary-based compression},
+  journal      = {Proc. {IEEE}},
+  volume       = {88},
+  number       = {11},
+  pages        = {1722--1732},
+  year         = {2000},
+  doi          = {10.1109/5.892708},
+}
+
+@article{witten1997,
+  author       = {Nevill-Manning, Craig G. and Witten, Ian H.},
+  title        = {Identifying hierarchical structure in sequences: a linear-time algorithm},
+  journal      = {J. Artif. Int. Res.},
+  volume       = {7},
+  number       = {1},
+  pages        = {67–82},
+  year         = {1997},
+  doi          = {10.5555/1622776.1622780}
+}
+
