--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -14,6 +14,7 @@
 \newacronym{bwt}{BWT}{Burrows-Wheeler Transform}
 \newacronym{sa}{SA}{suffix array}
 \newacronym{lz}{LZ}{Lempel-Ziv}
+\newacronym{cfg}{CFG}{context free grammars}
 
 \begin{document}
     \maketitle
@@ -39,6 +40,8 @@
     \section{Pattern matching on compressed indexes}
     \subfile{../sections/simple/7 - PM and CI}
 
+    \section{Algorithmic information theory}
+    \subfile{../sections/simple/8 - AIT}
     \printbibliography
     \printglossaries
 \end{document}
