--- a/Knowledge Representation/main/Knowledge Representation and Reasoning.tex
+++ b/Knowledge Representation/main/Knowledge Representation and Reasoning.tex
@@ -3,14 +3,24 @@
 \title{Notes on Knowledge Representation and Reasoning}
 \author{Riccardo Lo Iacono}
 
+\addbibresource{../extra/Bib/papers.bib}
 \makeglossaries
 \newacronym{krr}{KRR}{Knowledge Representation and Reasoning}
 \newacronym{fol}{FOL}{First Order Logic}
+\newacronym{cnf}{CNF}{conjunctive normal form}
+\newacronym{pnf}{PNF}{prenex normal form}
+\newacronym{snf}{SNF}{skolem normal form}
 \begin{document}
     \maketitle
 
     \section[Introduction to KRR]{Introduction to Knowledge Representation and Reasoning} 
     \subfile{../sections/simple/1 - Intro to KRR}
+
+    \section{Propositional logic}
+    \subfile{../sections/simple/2 - Propositional logic}
+
+    \section{Prepositional logic}
+    \subfile{../sections/simple/3 - Prepositional logic}
     \printbibliography
     \printglossaries
 \end{document}
