--- a/Knowledge Representation/sections/simple/1 - Intro to KRR.tex
+++ b/Knowledge Representation/sections/simple/1 - Intro to KRR.tex
@@ -1,6 +1,5 @@
 \documentclass{subfiles}
-
-\begin{document}
+\begin{document}\label{Sec:1}
     \gls{krr} is a branch of Artificial Intelligence focused on understandig how 
         knowledge, whose meaning will be soon clarified, 
         can be represented symbolically and manipulated automatically by reasoning programs.
@@ -31,4 +30,5 @@
 
     \subsection{Correct forms of reasoning}
     \subfile{../sub/1.2 - Correct forms of reasoning}
+    \clearpage
 \end{document}
