KRR: completed PDF. Note: the project is still WIP; it needs to be reviewed, errors must be checked, etc.

--- a/Knowledge Representation/main/Knowledge Representation and Reasoning.tex
+++ b/Knowledge Representation/main/Knowledge Representation and Reasoning.tex
@@ -1,4 +1,4 @@
-\documentclass[moon]{lectures2}
+\documentclass[moon, draft]{lectures2}
 
 \title{Notes on Knowledge Representation and Reasoning}
 \author{Riccardo Lo Iacono}
