InfoTheory: compiled the src without draft

--- a/Data Encryption/main/Data Encryption.tex
+++ b/Data Encryption/main/Data Encryption.tex
@@ -9,6 +9,7 @@
 \newacronym{gcd}{GCD}{greatest common divisor}
 \newacronym{lcm}{lcm}{least common multiple}
 \newacronym{ttp}{TTP}{trusted third party}
+
 \begin{document}
     \maketitle
 
@@ -23,7 +24,9 @@
 
     \section[Elliptic curves based algorithm]{Projective geometry and elliptic curves based algorithms}
     \subfile{../sections/simple/4 - Projective geometry}
-
+    
+    \section{Digital signature}
+    \subfile{../sections/simple/5 - Digital signature}
     \printbibliography
     \printglossaries
 \end{document} 
