--- a/Data Encryption/sections/sub/4.1 - Elliptic curves.tex
+++ b/Data Encryption/sections/sub/4.1 - Elliptic curves.tex
@@ -29,4 +29,7 @@
 
     \subsubsection{ElGamal on elliptic curves}
     \subfile{../subsub/4.1.1 - Elgamal on elliptic curves}
+
+    \subsubsection{Lenstra factorization}
+    \subfile{../subsub/4.1.2 - Lenstra factorization}
 \end{document}
