--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -1,4 +1,4 @@
-\documentclass[moon, draft]{lectures2}
+\documentclass[moon]{lectures2}
 
 \title{Notes on Information Theory}
 \author{Riccardo Lo Iacono}
