InfoTheory: Added re-pair and sequitur. Project completed.

--- a/Information Theory/extra/Bib/papers.bib
+++ b/Information Theory/extra/Bib/papers.bib
@@ -190,3 +190,16 @@
   doi          = {10.5555/1622776.1622780}
 }
 
+@article{yang2000,
+  author       = {En{-}Hui Yang and
+                  John C. Kieffer},
+  title        = {Efficient universal lossless data compression algorithms based on
+                  a greedy sequential grammar transform - Part one: Without context
+                  models},
+  journal      = {{IEEE} Trans. Inf. Theory},
+  volume       = {46},
+  number       = {3},
+  pages        = {755--777},
+  year         = {2000},
+  doi          = {10.1109/18.841161},
+}
