--- a/Information Theory/sections/sub/8.2 - SGP.tex
+++ b/Information Theory/sections/sub/8.2 - SGP.tex
@@ -23,5 +23,12 @@
         \]
         where \(G_{min}(x)\) is the smallest grammar that produces \(x\).
         In \cite{charikar2005} , Charikar et al. proved that, unless P = NP, \(\rho_{A}(n) < \sfrac{8569}{8568}\).
-        At date, the best algorithm to approximate the SGP are SEQUITUR (\cite{witten1997}) and RE-PAIR (\cite{larsson2000}).
+        In the next few sections we present the two best algorithms to approximate SGP.
+
+        \subsubsection{Re-Pair}
+        \subfile{../subsub/8.2.1 - RePair.tex}
+
+        \subsubsection{SEQUITUR}
+        \subfile{../subsub/8.2.2 - Sequitur.tex}
+
 \end{document}
