Data Encryption: completed sections 4-5.

--- a/Data Encryption/main/Data Encryption.tex
+++ b/Data Encryption/main/Data Encryption.tex
@@ -9,6 +9,7 @@
 \newacronym{gcd}{GCD}{greatest common divisor}
 \newacronym{lcm}{lcm}{least common multiple}
 \newacronym{ttp}{TTP}{trusted third party}
+\newacronym{ecm}{ECM}{Elliptic Curves Method}
 
 \begin{document}
     \maketitle
