DataEnc: section 6 started

--- a/Data Encryption/main/Data Encryption.tex
+++ b/Data Encryption/main/Data Encryption.tex
@@ -28,6 +28,9 @@
     
     \section{Digital signature}
     \subfile{../sections/simple/5 - Digital signature}
+
+    \section{Code theory}
+    \subfile{../sections/simple/6 - Code theory}
     \printbibliography
     \printglossaries
 \end{document} 
