--- a/Knowledge Representation/main/Knowledge Representation and Reasoning.tex
+++ b/Knowledge Representation/main/Knowledge Representation and Reasoning.tex
@@ -1,4 +1,4 @@
-\documentclass[moon, draft]{lectures2}
+\documentclass[moon]{lectures2}
 
 \title{Notes on Knowledge Representation and Reasoning}
 \author{Riccardo Lo Iacono}
