Data Encryption: fixed some mathematical notation

--- a/Data Encryption/sections/simple/5 - Digital signature.tex
+++ b/Data Encryption/sections/simple/5 - Digital signature.tex
@@ -1,5 +1,5 @@
 \documentclass{subfiles}
-\begin{document}
+\begin{document}\label{Sec:5}
     Consider the following: an entity \(A\) produce some message and it wants 
         to make sure that, if asked to, \(A\) can be prove that such message was 
         indeed produced by it; how can this be done?
