--- a/Data Encryption/sections/simple/1 - Intro to DE.tex
+++ b/Data Encryption/sections/simple/1 - Intro to DE.tex
@@ -3,9 +3,9 @@
     Data encryption and codes focuses on two aspects of cybersecurity,
         that are cryptography and linear codes. 
         For this reason, the present notes will be structured as follow: 
-        in \emph{Sections \ref{Sec:2}-\ref{Sec:4}} we discuss some algorithms 
+        in \emph{Sections \ref{Sec:2}-\ref{Sec:5}} we discuss some algorithms 
         used in cryptography, mainly focusing on public key encryption and hyperelliptic curves 
-        based algorithms; from \emph{Section \ref{Sec:5}} onwards we focus on linear codes.
+        based algorithms; in \emph{Section \ref{Sec:6}} we focus on linear codes.
 
     The remainder of this section will provide the reader some notions of abstract algebra,
         central to many of the topics described in the following sections.
