InfoTheory: updated Doc. Note most likely needs a complete revriting

--- a/Information Theory/extra/TikZ/Tab 1 - Example of Sardinas-Patterson.tex
+++ b/Information Theory/extra/TikZ/Tab 1 - Example of Sardinas-Patterson.tex
@@ -15,7 +15,7 @@
             bbcde   &                           & \textcolor{rpGold}{cde} &                         &                       & \textcolor{rpFoam}{bcde}  \\
             \hline
         \end{tabular}
-        \caption{Steps of Sardinas-Patterson for the code \(C\). 
+        \caption{Steps of Sardinas-Patterson for the code \(\C*\). 
         Note that each \(\omega\) has been added to the row of the value use for \(\alpha\).}
         \label{Tab:1}
     \end{table}    
