--- a/Information Theory/main/Information_Theory.tex
+++ b/Information Theory/main/Information_Theory.tex
@@ -3,6 +3,7 @@
 \title{Notes on Information Theory}
 \author{Riccardo Lo Iacono}
 
+\linespread{1}
 \addbibresource{../extra/Bib/other.bib}
 \addbibresource{../extra/Bib/papers.bib}
 \addbibresource{../extra/Bib/reports.bib}
@@ -18,7 +19,6 @@
 
 \begin{document}
     \maketitle
-
     \section{Basics of information theory} 
     \subfile{../sections/simple/1 - Basics of IT}
 
