--- a/Information Theory/sections/subsub/1.3.1 - Kraft-McMillan.tex
+++ b/Information Theory/sections/subsub/1.3.1 - Kraft-McMillan.tex
@@ -8,7 +8,7 @@
         Let \(S = \set{s_{1}, \ldots, s_{n}}\) be a source alphabet and \(X = \set{x_{1}, \ldots, x_{d}}\) a code alphabet.
             Let \(l_{1}, \ldots, l_{n}\) be a set of lengths.
             Then, a necessary and sufficient condition for the existence of a 
-        prefix-free code \(C\) over the alphabet \(X\) with codeword lengths 
+        prefix-free code \(\C*\) over the alphabet \(X\) with codeword lengths 
         \(l_{1}, \ldots, l_{n}\) is that 
         \[
             \sum_{i = 1}^{n}{d^{-l_{i}}} \le 1,
