--- a/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
+++ b/Information Theory/sections/subsub/1.3.2 - Optimal codes and SF encoding.tex
@@ -16,13 +16,12 @@
 
     \begin{example*}
         Consider the alphabet \(\Sigma = \set{a, b, c, d}\) and let \(p_{a} = \sfrac{1}{2},
-        p_{b} = \sfrac{1}{8}, p_{c} = \sfrac{1}{4}\) and \(p_{d} = \sfrac{1}{8}\)
-        Applying the steps above, we get the codes shown in the table below.
-        Here, each color is used to show a different iteraction.
-        \subfile{../../extra/TikZ/Tab * - Example of Shannon Fano encoding}
+            p_{b} = \sfrac{1}{8}, p_{c} = \sfrac{1}{4}\) and \(p_{d} = \sfrac{1}{8}\)
+            Applying the steps above, we get the codes shown in the table below.
+            Here, each color is used to show a different iteraction.
+            \subfile{../../extra/TikZ/Tab * - Example of Shannon Fano encoding}
     \end{example*}
 
-    One can prove that Shannon-Fano encoding is not optimal. 
-    We present it just for hystorical reasons.
+    One can prove that Shannon-Fano encoding is not optimal. We present it just for hystorical reasons.
     \cleardoublepage
 \end{document}
