--- a/Information Theory/sections/subsub/2.2.1 - Canonical Huffman encoding.tex
+++ b/Information Theory/sections/subsub/2.2.1 - Canonical Huffman encoding.tex
@@ -1,9 +1,9 @@
 \documentclass{subfiles}
 \begin{document}
-    Let \(C\) be the standard Huffman encoding for a source.
+    Let \(\C*\) be the standard Huffman encoding for a source.
     To obtain the canonical version, proceed as follows: 
     \begin{enumerate}
-        \item Compute the length of each codeword in \(C\)
+        \item Compute the length of each codeword in \(\C*\)
             with respect to each symbol in the source alphabet.
 
         \item Construct the \lstinline{num} array, where each entry \lstinline{num[l]}
