--- a/Information Theory/sections/subsub/1.2.3 - Prefix codes.tex
+++ b/Information Theory/sections/subsub/1.2.3 - Prefix codes.tex
@@ -1,12 +1,11 @@
 \documentclass{subfiles}
 \begin{document}
     Let's look back at the example of \emph{Section \ref{Sec:1.2.1}}. 
-        Given the codewords \(\set{0, 1, 01, 11}\) for the source symbols \(s_{1}, s_{2}, s_{3}, s_{4}\) respectively,
-        how should we decode the string \(000111\)?
+        Given the codewords \(\set{0, 1, 01, 11}\) for the source symbols \(s_{1}, 
+        s_{2}, s_{3}, s_{4}\) respectively, how should we decode the string \(000111\)?
         As noted before, unless some context is given, we cannot be certain.
 
-    Then, what is the issue? 
-        Essentially, even though each source symbol is assigned a distinct codeword,
+    Then, what is the issue? Essentially, even though each source symbol is assigned a distinct codeword,
         these codewords are not prefix-free, meaning that some are prefixes of others
         (e.g., the codeword for \(s_{1}\) is a prefix of the codeword for \(s_{3}\)).
         From this observation, a natural solution is to define codes that are prefix-free.
@@ -14,7 +13,7 @@
         that is, each codeword can be immidiately decoded without ambiguity.
 
     \begin{theorem*}
-        Let \(C\) be a prefix-free code; then \(C\) is UD.
+        Let \(\C*\) be a prefix-free code; then \(\C*\) is UD.
     \end{theorem*}
 
     \begin{proof*}
