--- a/Information Theory/sections/simple/1 - Basics of IT.tex
+++ b/Information Theory/sections/simple/1 - Basics of IT.tex
@@ -1,9 +1,8 @@
 \documentclass{subfiles}
 \begin{document}
-    Information theory, alongside data compression, 
-        plays a key role in modern computer science. 
-        The former provides theoretical tools useful, 
-        among other things, for understanding the limits of computability; 
+    Information theory, alongside data compression, plays a key role in modern computer science. 
+        The former provides theoretical tools useful, among other things,
+        for understanding the limits of computability; 
         the latter enables the reduction of space requirements 
         (in terms of bits) without loss of information.
 
